	     of several connections, persistent connections and chunked
         encoding. Reported by Laurent Rustuel.
    - Misc
       - Additional errors are now caught and logged in the HTTP 
         servers. Contributed by Marc Portier.
	   - Updated Jetty to version 7.1.6. Suggested by Marc Portier.
	   - Updated Netty to version 3.2.2.
	
- 2.0.0 (2010-07-19)
    - Bugs fixed
       - When cloning the prototype request, the ClientResource wasn't
         copying the ClientInfo#user property.
       - Fixed the setting of the Request's rootRef attribute when 
         using the RIAP protocol.
         Reported by Tal Liron and Tim Peierls. 
       - Fixed content negotiation issue in the Servlet extension and
         all HTTP connectors except the internal one.  
       - Fixed the deserialization of unavailable entities in the GWT 
         edition.
       - Fixed serialization of String objects in the GWT extension.
       - Allowed to filter serialized types in the GWT client proxies
         generated.
       - Fixed potential entity reading issue with Grizzly HTTP server.
       - Fixed the internal client connector when a connection cannot 
         be found to send a request.
       - Added missing createRequest(Request), createResponse(Request) 
         methods in the ClientResource class.
       - Optional authentication keep request in neutral state: neither
         authenticated neither unauthenticated.
         Reported by Bruno Harbulot.
       - Fixed RangeRepresentation which was incorrectly modifying the
         wrapped representation. Reported by David Fogel.
       - The ServerServlet now wraps the Servlet input and output 
         streams to prevent them from being closed, especially once the
         response has been returned to the container as it could be
         reused and impact another call.
         Suggested by Alois Cochard.
       - Removed Message#finalize() calling release() at GC time which 